--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,3 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap');
+/* font-family: 'Barlow', sans-serif; */
+
+
+body{
+	margin:0;
+	
+  font:600 16px/18px 'Barlow', sans-serif;
+  height: 554px;
+    width: 352px;
+    position: relative;
+    background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
+	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
+}
+*,:after,:before{box-sizing:border-box}
+
+
 .App {
   text-align: center;
 }
