--- a/front-end/src/components/layouts/applayout.css
+++ b/front-end/src/components/layouts/applayout.css
@@ -3,5 +3,5 @@
 	height:100%;
 	position:absolute;
 	padding:90px 3px 2px 3px;
-	background:rgba(40,57,101,.9);
+	background:rgba(2,122,197,0.5);
 }
