--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -84,6 +84,19 @@ body{
     margin-bottom: 1rem !important;
     margin-left: -4rem !important;
 }
+.welcomeMessageTags {
+  width: 100%;
+  float: left;
+  text-align: center;
+  margin-bottom: 12px;
+  margin-top: 8px;
+}
+.TagButton  {
+    font-size: 12px;
+    margin: 2px 3px;
+    cursor: pointer;
+    outline: none;
+}
 
 
 
