--- a/front-end/src/all.css
+++ b/front-end/src/all.css
@@ -4584,4 +4584,39 @@
  .fas {
    font-family: 'Font Awesome 5 Free';
    font-weight: 900; }
- 
+   .tag-wrapper{
+    margin-bottom: 10px;
+    font-size: .875rem!important;
+    line-height: 1.5!important;
+    border-radius: .2rem!important;
+    color: #fff!important;
+    background-color: #007bff!important;
+    border-color: #007bff!important;
+    box-shadow: none!important;
+    padding: 12px 6px 11px 11px;
+    margin-left: 2px !important;
+    margin-right: 2px !important;
+    /* margin-top: 10px !important; */
+    margin-top: 16px !important;
+   }
+   .ReactTags__remove{
+    margin-bottom: 14px !important;
+    margin-left: 8px !important;
+   }
+   .ReactTags__tagInputField{
+    display: block;
+    width: 100%;
+    height: calc(2.25rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    box-shadow: inset 0 0 0 transparent;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+
+   }
