--- a/front-end/src/components/layouts/applayout.css
+++ b/front-end/src/components/layouts/applayout.css
@@ -654,7 +654,7 @@ ul.maintab li a.active{
 	border-radius: 0 0 22px 22px;
 	border: 1px solid #D9E3EC;
 	background: #fff;
-	padding: 15px 20px 30px;
+	padding: 15px 20px 45px;
 	min-height: 125px;
 	position: relative;
 }
@@ -979,6 +979,7 @@ input[type="checkbox"].switch_2{
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+	z-index: 100;
 }
 
 .group_delete_popup {
