--- a/front-end/src/components/modules/Auth/login.css
+++ b/front-end/src/components/modules/Auth/login.css
@@ -32970,9 +32970,13 @@ color: #fff;
 }
 
 .listingholder {
-  height: 205px;
+  height: 256px;
   overflow: auto;
-  margin: 10px 0;
+  /* margin: 0px 0; */
+  margin-top: 10px;
+  margin-left: 0px;
+  margin-right: -14px;
+  margin-bottom: -25px;
 }   /*this is the new class for auto responder container for scrolling */
 
 .insert_msg .insert span img {
