--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -7,6 +7,17 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body::-webkit-scrollbar {
+  width: 5px;
+}
+
+body::-webkit-scrollbar-track {
+  background: #ddd;
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background: #85b1ea; 
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
