--- a/front-end/src/components/layouts/applayout.css
+++ b/front-end/src/components/layouts/applayout.css
@@ -12,6 +12,35 @@ body{
 	padding-top: 0px;
 }
 
+
+
+body::-webkit-scrollbar {
+	width: 5px;
+	}
+	
+	body::-webkit-scrollbar-track {
+	background: #ddd;
+	}
+	
+	body::-webkit-scrollbar-thumb {
+	background: #85b1ea;
+	}
+	
+	.listingholder {
+	height: 250px !important;
+	}
+	
+	.listingholder::-webkit-scrollbar {
+	width: 3px;
+	}
+	
+	.listingholder::-webkit-scrollbar-track {
+	background: #ddd;
+	}
+	
+	.listingholder::-webkit-scrollbar-thumb {
+	background: #85b1ea;
+	}
 .App-wrapper {
 	width: 367px;
 	height: 600px;
@@ -62,6 +91,7 @@ a{
 	background: #fff;
 	border-radius: 30px 30px 0 0;
 	padding: 30px 30px 98px;
+	height: 466px;
 }
 
 .login_welcome_block{
@@ -95,7 +125,7 @@ a{
     background: #fff;
     position: relative;
     border: 1px solid #D9E3EC;
-    top: -1px;
+    top: -4px;
 	left: -1px;
 	line-height: 28px;   /*this line is new or changed*/
 }
@@ -107,6 +137,7 @@ a{
     vertical-align: top;
     color: #708399;
     font-size: 12px;
+	width: 220px;
 }
 .text-right{
 	text-align: right;
@@ -893,7 +924,7 @@ input[type="checkbox"].switch_2{
 	flex-wrap: wrap;
 	align-items: center;
 	justify-content: space-between;
-	width: 70px;
+	width: 55px;
 }
 .segmentlist .action a{
 	margin: 0 4px;
@@ -1143,7 +1174,7 @@ new style added for modification
 }
 
 .login_block {
-    margin-bottom: 44px;
+    margin-bottom: 10px;
 }
 
 .createbtn:hover{
@@ -1194,6 +1225,8 @@ new style added for modification
 
  .css-1hwfws3 {
     height: 36px;
+	position: static !important;
+	padding: 2px 8px 2px 0 !important;
 }
 .css-1okebmr-indicatorSeparator {
     align-self: stretch;
@@ -1212,19 +1245,19 @@ new style added for modification
 }
 
 .css-1uccc91-singleValue {
-color: rgb(51, 51, 51);
-    margin-left: 2px;
-    margin-right: 2px;
-    max-width: calc(100% - 8px);
-    overflow: hidden;
-    position: absolute;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    height: 31px; /*this line is new or changed*/
-    line-height: 33px; /*this line is new or changed*/
-    top: 50%;
-    transform: translateY(-50%);
-    box-sizing: border-box;
+	color: rgb(51, 51, 51);
+	margin-left: 2px;
+	margin-right: 2px;
+	max-width: calc(100% - 8px);
+	overflow: hidden;
+	position: absolute;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	height: 36px;
+	top: 0px;
+	transform: none;
+	line-height: 36px;
+	box-sizing: border-box;
  }
  .tag-wrapper.ReactTags__tag {
 	color: #057ed9;
@@ -1247,4 +1280,32 @@ color: rgb(51, 51, 51);
     border: 1px solid #057ed9;
     margin: 0 0px 0 3px;
     color: #057ed9;
+}
+.segmentlist .txt:first-child {
+	width: 140px;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	display: inline-block;
+	white-space: pre;
+}
+.segmentlist .txt:nth-child(2) {
+	background: #edf3ff;
+	padding: 2px 5px;
+	border-radius: 3px;
+}
+.segmentlist .txt:nth-child(2) br{
+	display: none;
+}
+.formnumber input[type=number] {
+	margin-right: 18px;
+}
+.css-tlfecz-indicatorContainer {
+	padding: 8px 0 8px 0 !important;
+}
+
+.login_welcome_block h3.forgetpasswordtext{
+	font-size: 17px;
+}
+.listing_card .head .txt img {
+    margin-right: 4px;
 }
